# YourTreeHole

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  README.en.md  README.md  app.py  docker-compose.yml  persona.md  pyproject.toml
.githooks/: commit-msg
.github/workflows/: ci.yml
bot/: __init__.py  common.py  telegram_bot.py
cli/: main.py
config/: settings.toml
core/: __init__.py  agent.py  bond.py  config.py  context.py  emotion.py  llm.py  memory.py  mood.py  profile.py  tools.py
data/: persona.md
docs/superpowers/plans/: 2026-05-03-agent-framework.md  2026-05-07-emotion-system.md  2026-05-13-treehole.md
docs/superpowers/specs/: 2026-05-03-agent-framework-design.md  2026-05-07-emotion-system-design.md  2026-05-13-treehole-design.md  2026-05-14-docker-deploy-design.md  2026-05-14-multi-platform-design.md  2026-05-14-open-source-polish-design.md
tests/: test_agent.py  test_bond.py  test_bot_common.py  test_cli.py  test_config.py  test_context.py  test_emotion.py  test_integration.py  test_llm.py  test_memory.py  test_mood.py  test_profile.py  test_tools.py
tools/: file_ops.py  shell.py  web_search.py
web/: index.html
