[project]
name = "myagent"
version = "0.1.0"
description = "Personal AI pet/assistant framework"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "chromadb>=0.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
myagent = "cli.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
