[project]
name = "myagent"
version = "0.2.0"
description = "A local-first AI treehole with long-term memory"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "prompt-toolkit>=3.0",
    "sse-starlette>=2.1",
    "rich>=13.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]
telegram = [
    "python-telegram-bot>=20.0",
]

[project.scripts]
myagent = "cli.main:main"
murphy = "cli.main:main"
treehole-telegram = "bot.telegram_bot:main"

[tool.setuptools.packages.find]
include = ["bot", "bot.*", "cli", "cli.*", "core", "core.*"]
exclude = ["data", "data.*", "config", "config.*", "docs", "docs.*", "tests", "tests.*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
